--- a/Blogy.WebUI/appsettings.json
+++ b/Blogy.WebUI/appsettings.json
@@ -1,7 +1,9 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=MyAcademyBlogDb;TrustServerCertificate=true;"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=MyAcademyBlogyDb;Trusted_Connection=True;TrustServerCertificate=True"
   },
+
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
